@startuml
'https://plantuml.com/class-diagram

abstract class TienDienBacThang {
    + String tenBac
    + int mucMin
    + int mucMax
    + double gia

    + BacGia bacGiaKeTiep()
    + double tinhTienDien(double soDienSuDung)
}

class BacCaoNhat {}

class BacThongThuong {}

BacCaoNhat --|> TienDienBacThang
BacThongThuong --> TienDienBacThang : "keTiep"
BacThongThuong --|> TienDienBacThang

@enduml